prevent overflow-x

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     font-family: "Roboto Slab", serif;
     font-optical-sizing: auto;
     color: white;
+    overflow-x: hidden;
 }
 
 main {
